[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "*"
bitflags = {workspace = true}
spin ={ workspace = true}
heapless = { workspace = true }
bootloader-x86_64-common = {workspace = true}
log = { workspace = true}
bootloader-boot-config = { workspace = true }
